Fixed Buttons on mobile and center text

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,7 +60,7 @@ main {
 }
 .about-button-container{
     display: flex;
-    width: 300px;
+    width: 80%;
     justify-content: space-around;
     align-items: center;
 }
@@ -68,5 +68,19 @@ main {
     width: 100%;
     padding-top: 30px;
     object-fit: cover;
+}
+
+.about-text{
+    width: 80%;
+}
+
+.about-button{
+    width: 150px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+.about-button-button{
+    width: 100%;
+    height: 100%;
 }
 /* END: About Stuff */
